--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anastasiia",
+  "main": "index.js",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
   "license": "ISC",
   "dependencies": {
-    "commander": "^11.1.0"
+    "commander": "^11.1.0",
+    "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^8.53.0",
