--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Compares two configuration files and shows a difference.",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "author": "Anastasiia",
   "main": "index.js",
