--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "commander": "^11.1.0",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "eslint": "^8.53.0",
