--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,3 +21,5 @@ rules:
     - ignorePackages
     - js: always
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+  indent: 'off'
+  no-tabs: 'off'
