--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Compares two configuration files and shows a difference.",
   "type": "module",
   "scripts": {
-    "test": "npx jest"
+    "test": "npx jest --bail"
   },
   "author": "Anastasiia",
   "main": "src/index.js",
